Fix status gaps appearing on device formation tables

--- a/src/css/elements/tables.scss
+++ b/src/css/elements/tables.scss
@@ -53,7 +53,7 @@ table {
         &:before {
           content: '';
           display: table-cell;
-          height: 26px;
+          height: 100%;
           left: 0;
           position: absolute;
           width: 7px;
